--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.5.1",
         "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "chat0": "file:..",
         "gemoji": "^8.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
